# data-getter

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  encrypt.c  encrypt.h  general_data_getter.cpp  sensors.txt
main/buzzer/: buzzer.c  buzzer.h
main/peripherals/gpio/: gpio.c
main/peripherals/i2c/: i2c.c
main/sensors/RTC/: rtc.c  rtc.h
main/sensors/acoustic/: acoustic.c  acoustic.h
main/sensors/bmp180/: bmp180.c  bmp180.h
main/sensors/dht11/: dht11.c  dht11.h
main/sensors/dht22/: dht22.c
main/sensors/yl69/: yl69.c  yl69.h
